# ohjelmistotekniikka

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  pdf_to_html.py  tekoaly.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viiiko3/: luokkakaavio.md  sekvenssikaavio.md
laskarit/viikko1/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: build.py  index.py
src/db/: database_connection.py  initialize_database.py
src/entities/: match.py  user.py
src/lib/: elo_calculator.py
src/repositories/: match_repository.py  user_repository.py
src/services/: elo_service.py  match_service.py  pdf_service.py
src/tests/: elorating_test.py  match_test.py  pdf_service_test.py  user_creation_test.py  users_test.py
src/ui/: ui.py
src/ui/components/: __init__.py  match_submission.py  player_creation.py  player_table.py
src/ui/views/: hello_view.py  match_recording_view.py  pdf_export_view.py
