[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Tony Lam <tony.lam@iki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
