[tool.poetry]
name = "ohte"
version = "0.1.0"
description = ""
authors = ["Tony Lam <tony.lam@iki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
pylint = "^3.3.6"
autopep8 = "^2.3.2"
reportlab = "^4.4.0"
interrogate = "^1.7.0"
coverage-badge = "^1.1.2"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
weasyprint = "^65.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
exclude = ["src/tests"]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
ignore-private = true
ignore-semiprivate = true
